fullSandbox11072023/force-app/main/default/objects/OPERA__c/OPERA__c.object-meta.xml
<CustomObject>
    <label>OPERA</label>
    <nameField>
        <displayFormat>OPERA-{000000000}</displayFormat>
        <label>OPERA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OPERA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>