fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OPERA</relationshipLabel>
    <relationshipName>OPERA</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>