fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Account_Type_GPO_IDN__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_GPO_IDN__c</fullName>
    <formula>TEXT(Account__r.Type)</formula>
    <label>Account Type/GPO/IDN</label>
    <type>Text</type>
</CustomField>