fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Additional_Facility_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Facility_Information__c</fullName>
    <label>Additional Facility Information</label>
    <type>TextArea</type>
</CustomField>