fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Additional_Focus_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Focus_Information__c</fullName>
    <label>Additional Focus Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>