fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Additional_Secondary_Liaison__c.field-meta.xml
<CustomField>
    <fullName>Additional_Secondary_Liaison__c</fullName>
    <label>Additional/Secondary Liaison</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>