fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Annual_Critical_Care_Admissions__c.field-meta.xml
<CustomField>
    <fullName>Annual_Critical_Care_Admissions__c</fullName>
    <label>Annual Critical Care Admissions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>