fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/CAUTI_Score__c.field-meta.xml
<CustomField>
    <fullName>CAUTI_Score__c</fullName>
    <label>CAUTI Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>