fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Chief_Medical_Officer__c.field-meta.xml
<CustomField>
    <fullName>Chief_Medical_Officer__c</fullName>
    <label>Chief Medical Officer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>