fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Chief_Nursing_Officer_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Chief_Nursing_Officer_E_Mail__c</fullName>
    <label>Chief Nursing Officer E-Mail</label>
    <type>Email</type>
</CustomField>