fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Chief_Nursing_Officer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Chief_Nursing_Officer_Phone__c</fullName>
    <label>Chief Nursing Officer Phone</label>
    <type>Phone</type>
</CustomField>