fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Chief_Quality_Officer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Chief_Quality_Officer_Phone__c</fullName>
    <label>Chief Quality Officer Phone</label>
    <type>Phone</type>
</CustomField>