fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Desired_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Desired_Timeframe__c</fullName>
    <inlineHelpText>This does NOT guarantee this timeframe, but please select the account&apos;s preference.</inlineHelpText>
    <label>Desired Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>