fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Director_Infection_Prevention_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Director_Infection_Prevention_E_Mail__c</fullName>
    <label>Director Infection Prevention E-Mail</label>
    <type>Email</type>
</CustomField>