fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Facility_Certification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Facility_Certification_Notes__c</fullName>
    <label>Facility Certification Notes</label>
    <type>TextArea</type>
</CustomField>