fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Goals__c.field-meta.xml
<CustomField>
    <fullName>Goals__c</fullName>
    <label>Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>