fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/HAC_Score__c.field-meta.xml
<CustomField>
    <fullName>HAC_Score__c</fullName>
    <label>HAC Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>