fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/ICU_Beds__c.field-meta.xml
<CustomField>
    <fullName>ICU_Beds__c</fullName>
    <label>ICU Beds</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>