fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/IDN__c.field-meta.xml
<CustomField>
    <fullName>IDN__c</fullName>
    <formula>Account__r.IDN__c</formula>
    <label>IDN</label>
    <type>Text</type>
</CustomField>