fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Instruction__c.field-meta.xml
<CustomField>
    <fullName>Instruction__c</fullName>
    <defaultValue>&quot;Please complete as much detail as possible to assist in the account vetting process. (All RED fields are required.) An OPERA account contract will not be completed if required details are missing.&quot;</defaultValue>
    <label>Instruction</label>
    <type>TextArea</type>
</CustomField>