fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Joint_Commission__c.field-meta.xml
<CustomField>
    <fullName>Joint_Commission__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Facility Certifications</inlineHelpText>
    <label>Joint Commission</label>
    <type>Checkbox</type>
</CustomField>