fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Last_Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Survey_Date__c</fullName>
    <inlineHelpText>Facility Certifications</inlineHelpText>
    <label>Last Survey Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>