fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Liaison_Champion_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Liaison_Champion_E_Mail__c</fullName>
    <label>Liaison/Champion E-Mail</label>
    <type>Email</type>
</CustomField>