fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Liaison_Champion_Phone__c.field-meta.xml
<CustomField>
    <fullName>Liaison_Champion_Phone__c</fullName>
    <label>Liaison/Champion Phone</label>
    <type>Phone</type>
</CustomField>