fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <defaultValue>&quot;To Summarize Facility Data&quot;</defaultValue>
    <label>Objective</label>
    <type>TextArea</type>
</CustomField>