fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/OPERA_Assessment_Complete__c.field-meta.xml
<CustomField>
    <fullName>OPERA_Assessment_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPERA Assessment Complete</label>
    <type>Checkbox</type>
</CustomField>