fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/OPERA_Goal__c.field-meta.xml
<CustomField>
    <fullName>OPERA_Goal__c</fullName>
    <label>OPERA Goal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Increase awareness to CVAD care/use</fullName>
            </value>
            <value>
                <fullName>Product standardization across org</fullName>
            </value>
            <value>
                <fullName>Optimize care delivery model</fullName>
            </value>
            <value>
                <fullName>Reduce financial risk</fullName>
            </value>
            <value>
                <fullName>Increase patient safety</fullName>
            </value>
            <value>
                <fullName>Optimize prod utilization/stdzn</fullName>
            </value>
            <value>
                <fullName>Create operational efficiencies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>