fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/OPERA_Risk__c.field-meta.xml
<CustomField>
    <fullName>OPERA_Risk__c</fullName>
    <label>OPERA Risk</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leadership turnover</fullName>
            </value>
            <value>
                <fullName>Lack of infection prevention engmt</fullName>
            </value>
            <value>
                <fullName>Internal teams resistant to change</fullName>
            </value>
            <value>
                <fullName>Lack of urgency</fullName>
            </value>
            <value>
                <fullName>Contract restraints</fullName>
            </value>
            <value>
                <fullName>Lack of intl ability to change process</fullName>
            </value>
            <value>
                <fullName>Lack of internal stakeholders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>