fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Payer_Type__c.field-meta.xml
<CustomField>
    <fullName>Payer_Type__c</fullName>
    <label>Payer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GPO</fullName>
            </value>
            <value>
                <fullName>IDN</fullName>
            </value>
            <value>
                <fullName>Vizient</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>