fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Program_Goal__c.field-meta.xml
<CustomField>
    <fullName>Program_Goal__c</fullName>
    <defaultValue>IF( $RecordType.Id = &quot;01244000000NNmb&quot;,&quot;Utilize a three tier gap analysis to assess the opportunity to optimize performance and minimize risk of vascular access devices.&quot;,&quot;Identify in unit or product specific risk reduction opportunities through direct observation within a specific area and time.&quot;)</defaultValue>
    <label>Program Goal</label>
    <type>TextArea</type>
</CustomField>