fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Regional_Planning_Call_Members__c.field-meta.xml
<CustomField>
    <fullName>Regional_Planning_Call_Members__c</fullName>
    <inlineHelpText>List Teleflex Team Members to include on planning call (RSM, RCEM, CEM, Sales Rep, National Accounts Manager, KAM, etc)</inlineHelpText>
    <label>Regional Planning Call Members</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>