fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/SAP_Customer_number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_number__c</fullName>
    <formula>Account__r.SAP_Sold_To__c</formula>
    <label>SAP/Customer number</label>
    <type>Text</type>
</CustomField>