fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Specific_Product_Being_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Specific_Product_Being_Reviewed__c</fullName>
    <inlineHelpText>This field is required for Point Prevalence Programs.</inlineHelpText>
    <label>Specific Product Being Reviewed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>