fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Total_Critical_Care_Beds__c.field-meta.xml
<CustomField>
    <fullName>Total_Critical_Care_Beds__c</fullName>
    <label>Total Critical Care Beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>