fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Total_Penalty_Revenue_Loss__c.field-meta.xml
<CustomField>
    <fullName>Total_Penalty_Revenue_Loss__c</fullName>
    <label>Total Penalty Revenue Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>