fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Vascular_Access_Team_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Vascular_Access_Team_E_Mail__c</fullName>
    <label>Vascular Access Team E-Mail</label>
    <type>Email</type>
</CustomField>