fullSandbox11072023/force-app/main/default/objects/OPERA__c/fields/Vascular_Access_Team_Phone__c.field-meta.xml
<CustomField>
    <fullName>Vascular_Access_Team_Phone__c</fullName>
    <label>Vascular Access Team Phone</label>
    <type>Phone</type>
</CustomField>