fullSandbox11072023/force-app/main/default/objects/OPERA__c/recordTypes/OPERA_Point_Prevalence_Vascular.recordType-meta.xml
<RecordType>
    <fullName>OPERA_Point_Prevalence_Vascular</fullName>
    <active>true</active>
    <label>OPERA Point Prevalence - Vascular</label>
</RecordType>