fullSandbox11072023/force-app/main/default/objects/OPERA__c/recordTypes/OPERA_Vascular.recordType-meta.xml
<RecordType>
    <fullName>OPERA_Vascular</fullName>
    <active>true</active>
    <label>OPERA - Vascular</label>
</RecordType>